--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Open Sans", sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	margin: 0;
 	padding: 0;
 	background-color: #f8f5f0;
@@ -200,7 +200,7 @@ hr {
 	padding: 20px;
 }
 .credit h2 {
-	font-family: "Great Vibes", cursive;
+	font-family: 'Great Vibes', cursive;
 	font-size: 36px;
 	margin-bottom: 10px;
 }
